# algebraic-client

./: Cargo.toml  README.md
input/: input.txt
src/: main.rs  operation.rs
